--- a/style.css
+++ b/style.css
@@ -857,6 +857,274 @@ body {
   }
 }
 
+/*  MacBook Pro & HomePod Banners */
+.macBookProAndHomePodBanners {
+  display: flex;
+  flex-direction: row;
+  overflow-x: hidden;
+  margin: 12px 12px 0 12px;
+  position: relative;
+}
+
+.macBookProBanner {
+  position: relative;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-right: 6px;
+}
+
+.homePodBanner {
+  position: relative;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-left: 6px;
+}
+
+.macBookProAndHomePodBanners img {
+  height: 580px;
+  width: 100%;
+}
+
+.macBookProBanner h1 {
+  position: absolute;
+  top: 0px;
+  margin-top: 54px;
+  font-size: 39px;
+  color: #f5f5f7;
+  letter-spacing: 1px;
+}
+
+.macBookProBanner p {
+  position: absolute;
+  top: 0px;
+  margin-top: 101px;
+  font-size: 20px;
+  line-height: 26px;
+  color: #f5f5f7;
+  text-align: center;
+}
+
+.breakMacBookProBannerText {
+  display: none;
+}
+
+.macBookProBannerButtons {
+  position: absolute;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  top: 0px;
+  margin-top: 140px;
+}
+
+.macBookProBannerButton {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.macBookProBannerButton a {
+  text-decoration: none;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.macBookProBannerButton1Text,
+.macBookProBannerButton2Text {
+  font-size: 17px;
+  font-weight: 400;
+  color: #0066cc;
+  padding-right: 7px;
+}
+
+.macBookProBannerButton i {
+  font-size: 10px;
+  color: #0066cc;
+}
+
+.macBookProBannerButton1 {
+  margin-right: 34px;
+}
+
+.homePodBanner h1 {
+  position: absolute;
+  top: 0px;
+  margin-top: 54px;
+  font-size: 39px;
+  font-weight: 600;
+  color: #f5f5f7;
+}
+
+.homePodBanner p {
+  position: absolute;
+  top: 0px;
+  margin-top: 101px;
+  font-size: 20px;
+  line-height: 26px;
+  color: #f5f5f7;
+  text-align: center;
+}
+
+.homePodBanner h6 {
+  position: absolute;
+  top: 0px;
+  margin-top: 140px;
+  font-size: 17px;
+  font-weight: 200;
+  color: #616165;
+  text-align: center;
+}
+
+.homePodBannerButtons {
+  display: flex;
+  flex-direction: row;
+  position: absolute;
+  top: 0px;
+  margin-top: 175px;
+}
+
+.homePodBannerButton {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.homePodBannerButton a {
+  text-decoration: none;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.homePodBannerButton1Text,
+.homePodBannerButton2Text {
+  font-size: 17px;
+  font-weight: 400;
+  color: #0066cc;
+  padding-right: 7px;
+}
+
+.homePodBannerButton i {
+  font-size: 10px;
+  color: #0066cc;
+}
+
+.homePodBannerButton1 {
+  margin-right: 34px;
+}
+
+/* Max Width 1053 */
+@media screen and (max-width: 1053px) {
+  .macBookProAndHomePodBanners img {
+    height: 490px;
+  }
+
+  .macBookProBanner h1 {
+    margin-top: 42px;
+    font-size: 32px;
+    color: #f5f5f7;
+    letter-spacing: 0px;
+  }
+
+  .macBookProBanner p {
+    margin-top: 82px;
+    font-size: 19px;
+    line-height: 23px;
+  }
+
+  .macBookProBannerButtons {
+    margin-top: 120px;
+  }
+
+  .homePodBanner h1 {
+    margin-top: 42px;
+    font-size: 32px;
+  }
+
+  .homePodBanner p {
+    margin-top: 82px;
+    font-size: 19px;
+    line-height: 23px;
+  }
+
+  .homePodBanner h6 {
+    margin-top: 117px;
+    font-size: 19px;
+    font-weight: 200;
+  }
+
+  .homePodBannerButtons {
+    margin-top: 154px;
+  }
+}
+
+/* Max Width 718 */
+@media screen and (max-width: 718px) {
+  .macBookProAndHomePodBanners {
+    flex-direction: column;
+    margin: 12px 0 0 0;
+  }
+
+  .macBookProBanner {
+    margin-right: 0px;
+    margin-bottom: 6px;
+  }
+
+  .homePodBanner {
+    margin-left: 0px;
+    margin-top: 6px;
+  }
+
+  .macBookProAndHomePodBanners img {
+    height: 500px;
+  }
+
+  .macBookProBanner h1 {
+    margin-top: 37px;
+    font-size: 32px;
+  }
+
+  .macBookProBanner p {
+    margin-top: 76px;
+    font-size: 19px;
+    line-height: 25px;
+  }
+
+  .breakMacBookProBannerText {
+    display: block;
+  }
+
+  .macBookProBannerButtons {
+    margin-top: 140px;
+  }
+
+  .homePodBanner h1 {
+    margin-top: 37px;
+    font-size: 32px;
+  }
+
+  .homePodBanner p {
+    margin-top: 77px;
+    font-size: 19px;
+    line-height: 23px;
+  }
+
+  .homePodBanner h6 {
+    margin-top: 114px;
+    font-size: 17px;
+    font-weight: 200;
+  }
+
+  .homePodBannerButtons {
+    margin-top: 149px;
+  }
+}
+
 /*  Gift2 & Card Banners */
 .gift2AndCardBanners {
   display: flex;
@@ -936,7 +1204,6 @@ body {
   color: #ffffff;
 }
 
-/* */
 .cardBanner h1 {
   position: absolute;
   top: 0px;
