--- a/style.css
+++ b/style.css
@@ -1368,3 +1368,274 @@ body {
     margin-top: 137px;
   }
 }
+
+/* Apple TV Plus */
+.appleTvPlus {
+  margin-top: 12px;
+  overflow-x: hidden;
+}
+
+.appleTvPlusTopSection {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  translate: -60.044477390659747961452928094885%;
+}
+
+.seriesItem {
+  position: relative;
+  margin-right: 15px;
+  width: 72.646404744255003706449221645663%;
+  min-height: 523px;
+}
+
+.seriesItem img {
+  overflow: hidden;
+}
+
+.slideOpacity {
+  opacity: 35%;
+}
+
+.bottomSectionSeries {
+  position: absolute;
+  flex-direction: row;
+  align-items: center;
+  bottom: 0;
+  margin-bottom: 35px;
+}
+
+.streamNowButton {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  font-size: 14px;
+  line-height: 14px;
+  font-weight: 700;
+  color: #1d1d1f;
+  background-color: #ffffff;
+  height: 44px;
+  padding: 0 22px 0 22px;
+  border-radius: 22px;
+  margin: 0 41px 0 68px;
+}
+
+.streamNowButton:hover {
+  background-color: #f5f5f7;
+  cursor: pointer;
+}
+
+.streamNowButton p {
+  margin-right: 5px;
+  white-space: nowrap;
+}
+
+.seriesInfo {
+  position: relative;
+  font-size: 20px;
+  line-height: 22px;
+  font-weight: 700;
+  color: #ffffff;
+  padding: 0;
+  margin: 0;
+  text-align: left;
+}
+
+.seriesInfoText {
+  font-size: 20px;
+  line-height: 22px;
+  font-weight: 400;
+  color: #ffffff;
+  padding: 0;
+  margin: 0;
+}
+
+.seriesInfoText::before {
+  content: "• ";
+}
+
+.rightLeftButtonsSlider {
+  display: none;
+}
+.appleTvPlusBottomSection {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  margin: 16px 0 14px 0;
+}
+
+.circlesStatusSeries {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.circlesStatusSeries span {
+  position: relative;
+  width: 8px;
+  height: 8px;
+  border-radius: 4px;
+}
+
+.circlesStatusSeries :not(:last-child) {
+  margin-right: 14px;
+}
+
+.circlesStatusSeries span:hover {
+  cursor: pointer;
+}
+
+.unselectedCircle {
+  background-color: #d6d6d6;
+}
+
+.selectedCircle {
+  background-color: #707070;
+}
+
+.playButtonSeries {
+  position: absolute;
+  margin-left: 78%;
+  font-size: 22px;
+  font-weight: 400;
+  color: #1d1d1d;
+}
+
+.pauseButtonSeries {
+  position: absolute;
+  margin-left: 78%;
+  font-size: 22px;
+  font-weight: 400;
+  color: #1d1d1d;
+}
+
+.playButtonSeries:hover,
+.pauseButtonSeries:hover {
+  cursor: pointer;
+}
+
+/* Max Width 1053 */
+@media screen and (max-width: 1053px) {
+  .seriesItem {
+    min-height: 368px;
+  }
+
+  .bottomSectionSeries {
+    margin-bottom: 21px;
+    padding-right: 100px;
+  }
+
+  .streamNowButton {
+    margin: 0 31px 0 42px;
+  }
+
+  .seriesInfo {
+    position: relative;
+    font-size: 19px;
+    line-height: 22px;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .seriesInfoText {
+    font-size: 19px;
+    line-height: 22px;
+  }
+
+  .appleTvPlusBottomSection {
+    margin: 15px 0 14px 0;
+  }
+}
+
+/* Max Width 718 */
+@media screen and (max-width: 718px) {
+  .appleTvPlusTopSection {
+    translate: -20.364238410596027%;
+  }
+
+  .seriesItem {
+    min-height: 495px;
+    width: 45.36423841059602%;
+  }
+
+  .seriesItem img {
+    overflow: hidden;
+  }
+
+  .bottomSectionSeries {
+    margin-top: unset;
+    top: unset;
+    bottom: 0;
+    margin-bottom: 30px;
+    padding-right: 0px;
+    flex-direction: column;
+    align-items: center;
+    /* border: 1px solid hotpink; */
+    left: 50%;
+    transform: translateX(-50%);
+    width: 70%;
+  }
+
+  .streamNowButton {
+    order: 2;
+    padding: 0 23px 0 23px;
+    height: 46px;
+    margin: 12px 0px 0 0px;
+  }
+
+  .seriesInfo {
+    order: 1;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    font-size: 15px;
+    line-height: 20px;
+    align-items: center;
+  }
+
+  .seriesInfoText {
+    font-size: 15px;
+    line-height: 20px;
+    text-align: center;
+    /* border: 1px solid firebrick; */
+  }
+
+  .seriesInfoText::before {
+    content: "";
+  }
+
+  .rightLeftButtonsSlider {
+    display: flex;
+    justify-content: space-between;
+    position: absolute;
+    margin-top: 50%;
+    margin-left: 50%;
+    transform: translateX(-50%);
+    z-index: 2;
+    /* border: 1px solid rgb(202, 21, 67); */
+    width: 75%;
+  }
+
+  .rightLeftButtonsSlider i:hover {
+    cursor: pointer;
+  }
+
+  .leftButtonSlider {
+    font-size: 25px;
+    font-weight: 500;
+    color: #4d4947;
+  }
+
+  .rightButtonSlider {
+    font-size: 25px;
+    font-weight: 500;
+    color: #4d4947;
+  }
+
+  .appleTvPlusBottomSection {
+    margin: 16px 0 14px 0;
+  }
+}
