--- a/style.css
+++ b/style.css
@@ -1396,14 +1396,15 @@ body{
   display: flex;
   flex-direction: row;
   align-items: center;
-  translate: -60.044477390659747961452928094885%;
+  translate: calc((-50.01% + 1483.4px)*-1);
 }
 
 .seriesItem {
   position: relative;
   margin-right: 15px;
-  width: 72.646404744255003706449221645663%;
+  width: 979px;
   min-height: 523px;
+  max-height: 523px;
 }
 
 .seriesItem img {
@@ -1535,8 +1536,14 @@ body{
 
 /* Max Width 1053 */
 @media screen and (max-width: 1053px) {
+  .appleTvPlusTopSection {
+    translate: calc((-50% + 1048px)*-1);
+  }
+
   .seriesItem {
     min-height: 368px;
+    max-height: 368px;
+    width: 689px;
   }
 
   .bottomSectionSeries {
@@ -1570,12 +1577,13 @@ body{
 /* Max Width 718 */
 @media screen and (max-width: 718px) {
   .appleTvPlusTopSection {
-    translate: -20.364238410596027%;
+    translate: calc((-50.25% + 426.67px)*-1);
   }
 
   .seriesItem {
     min-height: 495px;
-    width: 45.36423841059602%;
+    max-height: 495px;
+    width: 274px;
   }
 
   .seriesItem img {
@@ -1590,7 +1598,6 @@ body{
     padding-right: 0px;
     flex-direction: column;
     align-items: center;
-    /* border: 1px solid hotpink; */
     left: 50%;
     transform: translateX(-50%);
     width: 70%;
@@ -1617,7 +1624,6 @@ body{
     font-size: 15px;
     line-height: 20px;
     text-align: center;
-    /* border: 1px solid firebrick; */
   }
 
   .seriesInfoText::before {
@@ -1628,12 +1634,11 @@ body{
     display: flex;
     justify-content: space-between;
     position: absolute;
-    margin-top: 50%;
+    margin-top: 237px;
     margin-left: 50%;
     transform: translateX(-50%);
     z-index: 2;
-    /* border: 1px solid rgb(202, 21, 67); */
-    width: 75%;
+    width: calc(50% + 167.5px);
   }
 
   .rightLeftButtonsSlider i:hover {
@@ -1674,7 +1679,6 @@ body{
   font-weight: 400;
   color: #6e6e73;
   margin-top: 0;
-  /* border: 1px solid green; */
 }
 
 .topSectionFooter p:not(:last-child) {
@@ -1731,7 +1735,6 @@ body{
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  /* border: 1px solid hotpink; */
 }
 
 .footerTitleOpener {
@@ -1743,7 +1746,6 @@ body{
   font-weight: 400;
   line-height: 16px;
   color: #6e6e73;
-  /* border-bottom: 1px solid #d2d2d7 ; */
 }
 
 .bottomSectionFooter p a {
@@ -1797,12 +1799,14 @@ text-decoration: underline;
   padding-left: 10px;
 }
 
+/* Max Width 1043 */
 @media screen and (max-width: 1043px) {
   .footer {
     padding: 20px 23px 29px 23px;
   }
 }
 
+/* Max Width 905 */
 @media screen and (max-width: 905px) {
   .bottomSectionFooter2 {
     align-items: flex-start;
@@ -1820,6 +1824,7 @@ text-decoration: underline;
   }
 }
 
+/* Max Width 833 */
 @media screen and (max-width: 833px) {
   .footer {
     padding: 20px 15px 29px 15px;
