--- a/style.css
+++ b/style.css
@@ -80,6 +80,8 @@ body{
   width: 100%;
   white-space: nowrap;
   overflow: hidden;
+  background-color: #323233;
+  border: none;
 }
 
 .inputSearchHeader:focus {
@@ -243,10 +245,10 @@ body{
   display: flex;
   flex-direction: row;
   align-items: center;
+  justify-content: flex-start;
   width: 100%;
   height: 36px;
   background-color: #1d1d1f;
-  text-align: left;
   border-radius: 6px;
   padding: 0 8px;
 }
@@ -258,6 +260,8 @@ body{
   width: 80%;
   white-space: nowrap;
   overflow: hidden;
+  background-color: #1d1d1f;
+  border: none;
 }
 
 .inputSearch:focus {
@@ -276,7 +280,7 @@ body{
   display: none;
   width: 17px;
   cursor: pointer;
-  padding-left: 10px;
+  padding: 5px 2px;
 }
 
 .clearSearchBar1 {
