--- a/style.css
+++ b/style.css
@@ -99,7 +99,7 @@ body{
 .closeSearchHeader {
   width: 17px;
   cursor: pointer;
-  padding-left: 13px;
+  padding: 6px 2px;
 }
 
 .closeSearchBar1 {
@@ -287,7 +287,7 @@ body{
   position: absolute;
   width: 17px;
   height: 1px;
-  background: #d7d7d7;
+  background: #5a5a5f;
   rotate: -45deg;
 }
 
@@ -295,7 +295,7 @@ body{
   position: absolute;
   width: 17px;
   height: 1px;
-  background: #d7d7d7;
+  background: #5a5a5f;
   rotate: +45deg;
 }
 
